--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,5 +1,6 @@
 <html>
     <body>
-        <h1>weKanban board will come shortly</h1>
+        <h1>weKanban board is here!</h1>
+        <a href="/kanban/board">Kanban Board</a>
     </body>
 </html>
